create authenticate router
