# src/modules/accounts/dtos/ICreateUserTokenDTO.ts
@@ -1,0 +1,7 @@
+interface ICreateUserTokenDTO {
+  refresh_token: string;
+  user_id: string;
+  expires_date: Date;
+}
+
+export { ICreateUserTokenDTO }
