# src/modules/accounts/useCase/authenticateUser/AuthenticateUserController.ts
@@ -1,0 +1,20 @@
+import { Request, Response } from "express";
+import { container } from "tsyringe";
+import { AuthenticateUserUseCase } from "./AuthenticateUserUseCase";
+
+class AuthenticateUserController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const { email, password } = request.body;
+
+    const authenticateUserUseCase = container.resolve(AuthenticateUserUseCase);
+
+    const authenticatedUser = await authenticateUserUseCase.execute({
+      email,
+      password
+    })
+
+    return response.status(201).json(authenticatedUser);
+  }
+}
+
+export { AuthenticateUserController }
