# src/shared/http/routes/authenticate.routes.ts
@@ -1,0 +1,10 @@
+import { Router } from "express";
+import { AuthenticateUserController } from "../../../modules/accounts/useCase/authenticateUser/AuthenticateUserController";
+
+const authenticateRoutes = Router();
+
+const authenticateUserController = new AuthenticateUserController();
+
+authenticateRoutes.post("/session", authenticateUserController.handle);
+
+export { authenticateRoutes }
